fix the mobile adaption issues: the menu, the table overflow / font-size: 11pt

--- a/assets/_base.scss
+++ b/assets/_base.scss
@@ -2,7 +2,7 @@ html {
   background-color: white;
   color: black;
   height: 100%;
-  font: 18px/1.6 "Nunito", "Yuanti SC", "PingFang TC", "Microsoft JhengHei";
+  font: 12pt/1.618 "Nunito", "Yuanti SC", "PingFang TC", "Microsoft JhengHei";
   font-weight: 400;
   font-optical-sizing: auto;
   font-style: normal;
