--- a/assets/default.scss
+++ b/assets/default.scss
@@ -1,6 +1,8 @@
 ---
 ---
 
+@import "./var";
+
 .Content {
   z-index: 100;
   margin: 0 auto;
@@ -14,16 +16,18 @@
   }
 
   /* 适配不同设备 */
-  @media (max-width: 576px) {
+  @media screen and (max-width: $sm-screen-width) {
     /* 手机 */
     width: 100%;
   }
-  @media (min-width: 577px) and (max-width: 768px) {
+
+  @media screen and (min-width: $sm-screen-width_1) and (max-width: $md-screen-width) {
     /* 平板 */
     width: 90%;
     max-width: 720px;
   }
-  @media (min-width: 769px) {
+
+  @media screen and (min-width: $md-screen-width_1) {
     width: 80%;
     max-width: 21cm;
     margin: auto;
@@ -54,6 +58,10 @@
     border: 1px solid #767676;
     border-radius: 50%;
     position: relative;
+
+    @media screen and (max-width: $xs-screen-width) {
+      display: none;
+    }
   }
 
   &:hover {
@@ -77,6 +85,20 @@
   gap: 6px;
   list-style: none;
   font-weight: 600;
+  line-height: 1;
+  padding: 0;
+  justify-content: flex-end;
+  align-items: center;
+  flex-shrink: 0;
+  flex-grow: 0;
+  flex-basis: 120px;
+
+  // @media screen and (max-width: $xs-screen-width) {
+  //   li span {
+  //     display: none;
+  //   }
+  // }
+
   a {
     i {
       font-style: normal;
@@ -84,7 +106,7 @@
     }
 
     span {
-      font-size: 0.8em;
+      font-size: 1em;
     }
   }
 }
